--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-  background: url("images/background.gif") no-repeat;
+  background: url("images/background.gif") no-repeat fixed;
   background-size: cover;
   height: 100vh;
   width: 100%;
