--- a/src/components/styles/Pressable.css
+++ b/src/components/styles/Pressable.css
@@ -1,9 +1,9 @@
 .Pressable {
-  display: inline-block;
   background: #aaa;
   border: 2px solid grey;
   border-radius: 50%;
   height: 150px;
   width: 150px;
   outline: none;
+  margin: auto;
 }
