--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .App__ListItem {
