--- a/src/components/styles/Pressable.css
+++ b/src/components/styles/Pressable.css
@@ -1,9 +1,13 @@
 .Pressable {
-  background: #aaa;
   border: 2px solid grey;
   border-radius: 50%;
   height: 150px;
   width: 150px;
   outline: none;
   margin: auto;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  text-shadow: 0 0 2px #000;
+  letter-spacing: 1px;
+  color: white;
 }
