--- a/src/components/styles/Pressable.css
+++ b/src/components/styles/Pressable.css
@@ -11,3 +11,9 @@
   letter-spacing: 1px;
   color: white;
 }
+
+.Pressable:active {
+  border-color: white;
+  color: grey;
+  text-shadow: 0 0 2px #fff;
+}
